examples/test/testpolicy1758.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1758
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key6: value26
      key35: value27
      key46: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value2
          key7: value37
          key35: value47
      podSelector:
        matchLabels:
          key35: value36
          key28: value2
